# ros2

./: LICENSE  README.md
install/: local_setup.sh  setup.sh
install/voice_turtlesim_controller/lib/voice_turtlesim_controller/: voice_command_node
install/voice_turtlesim_controller/share/voice_turtlesim_controller/: package.bash  package.dsv  package.sh  package.xml  package.zsh
install/voskros/include/voskros/voskros/msg/: rosidl_generator_c__visibility_control.h  rosidl_generator_cpp__visibility_control.hpp  rosidl_typesupport_fastrtps_c__visibility_control.h  rosidl_typesupport_fastrtps_cpp__visibility_control.h  rosidl_typesupport_introspection_c__visibility_control.h
install/voskros/include/voskros/voskros/srv/: set_grammar.h  set_grammar.hpp
install/voskros/include/voskros/voskros/srv/detail/: set_grammar__builder.hpp  set_grammar__functions.h  set_grammar__rosidl_typesupport_fastrtps_c.h  set_grammar__rosidl_typesupport_fastrtps_cpp.hpp  set_grammar__rosidl_typesupport_introspection_c.h  set_grammar__rosidl_typesupport_introspection_cpp.hpp  set_grammar__struct.h  set_grammar__struct.hpp  set_grammar__traits.hpp  (+2 more)
install/voskros/lib/voskros/: prompter  set_grammar.sh  vosk
install/voskros/share/ament_index/resource_index/package_run_dependencies/: voskros
install/voskros/share/ament_index/resource_index/parent_prefix_path/: voskros
install/voskros/share/ament_index/resource_index/rosidl_interfaces/: voskros
install/voskros/share/voskros/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.sh  package.xml  package.zsh
install/voskros/share/voskros/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  export_voskros__rosidl_generator_cExport.cmake  export_voskros__rosidl_typesupport_fastrtps_cExport-noconfig.cmake  export_voskros__rosidl_typesupport_fastrtps_cExport.cmake  export_voskros__rosidl_typesupport_fastrtps_cppExport-noconfig.cmake  export_voskros__rosidl_typesupport_fastrtps_cppExport.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake  voskrosConfig-version.cmake  voskrosConfig.cmake  voskros__rosidl_typesupport_cExport-noconfig.cmake  voskros__rosidl_typesupport_introspection_cExport-noconfig.cmake  voskros__rosidl_typesupport_introspection_cExport.cmake  voskros__rosidl_typesupport_introspection_cppExport-noconfig.cmake
install/voskros/share/voskros/config/: prompter.yaml
install/voskros/share/voskros/environment/: ament_prefix_path.dsv  library_path.dsv  path.dsv  pythonpath.dsv  pythonpath.sh
install/voskros/share/voskros/launch/: voskros.launch.yaml
install/voskros/share/voskros/srv/: SetGrammar.idl  SetGrammar.json  SetGrammar.srv
log/: latest_build
src/voice_turtlesim_controller/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/voice_turtlesim_controller/msg/: ARVRControl.msg  ObjectPose.msg  RobotState.msg
src/voice_turtlesim_controller/src/: turtle_control_node.cpp  voice_control_node.cpp
src/voice_turtlesim_controller/voice_turtlesim_controller/: turtle_pos.rviz  turtle_pose_to_rviz.py  voice_command_node.py
venv_vosk/: pyvenv.cfg
visuals/: tposrviz.md  tsim.md  video.webm  voskros.md  vtsimcon.md
